# catflow-service-inference

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
catflow_service_inference/: __init__.py  embedding.py  model.py  worker.py
tests/: conftest.py  test_handler.py  test_import.py
tests/test_files/: README.md
