[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "catflow-service-inference"
dynamic = ["version"]
readme = "README.md"
description = "Inference service for an object recognition pipeline"
authors = [{ name = "Ian Kilgore", email = "iank@iank.org"}]
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
  "catflow-worker>=0.1.6",
  "aiofiles",
  "opencv-python-headless",
]

[tool.setuptools]
packages = ["catflow_service_inference"]

[project.scripts]
catflow-service-inference = "catflow_service_inference:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-datafiles",
  "moto",
]

[tool.setuptools_scm]
write_to = "catflow_service_inference/_version.py"
