[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "catflow-service-inference"
dynamic = ["version"]
readme = "README.md"
description = "Inference service for an object recognition pipeline"
authors = [{ name = "Ian Kilgore", email = "iank@iank.org"}]
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
  "catflow-worker>=0.1.6",
  "aiofiles",
  "torch",
  "torchvision",
  "opencv-python-headless",
  "pandas",
  "psutil",
  "tqdm",
  "ultralytics",
]

[tool.setuptools]
packages = ["catflow_service_inference"]

[project.scripts]
catflow-service-inference = "catflow_service_inference:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-datafiles",
  "moto",
]

[tool.setuptools_scm]
write_to = "catflow_service_inference/_version.py"

[tool.pytest.ini_options]
filterwarnings = [
    # Fail on any warnings that are not explicitly matched below
    "error",
    # matplotlib
    "ignore:Deprecated call to `pkg_resources\\.declare_namespace\\('.*'\\):DeprecationWarning",
    # ultralytics
    "ignore:pkg_resources is deprecated as an API",
    "ignore:Please use `gaussian_filter1d` from the `scipy.ndimage` namespace, the `scipy.ndimage.filters` namespace is deprecated.:DeprecationWarning",
]
